<resources>
    <string name="app_name">Outlet Devices</string>
    <string name="app_preferences">Asset Shared Preferences</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_outlet_name">Select Outlet Name</string>
    <string name="select_and_proceed">Select and Proceed</string>
    <string name="select_device">Select Device</string>
    <string name="click_to_scan_qr_code">Click to Scan QR Code</string>
    <string name="select_condition">Select Condition</string>
    <string name="other_remarks">Other Remarks</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="add_content_in_the_mail">ADD CONTENT IN THE MAIL</string>

    <string name="take_barcode_picture">Take Barcode Picture</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="barcode_text">Barcode Text</string>
    <string name="reset">Reset</string>

    <string name="image_href">ImageRef</string>
    <string name="condition">Condition :</string>
    <string name="barcode">Barcode</string>
    <string name="Other">Other</string>
    <string name="outlet_id">outlet_id</string>
    <string name="fetched_outlet_id">fetched_outlet_id</string>
    <string name="device_id">device_id</string>
    <string name="datetime">datetime</string>
    <string name="Image">Image</string>
    <string name="device_name">device name</string>
    <string name="place_holder">Place Holder</string>
    <string name="upload_to_server">Upload to Server</string>
    <string name="continue_filling">Continue Filling</string>
    <string name="asset_id">asset_id</string>
    <string name="barCode">barCode</string>
    <string name="qrCode">qrCode</string>
    <string name="stateId">stateId</string>
    <string name="asset_ids">asset_ids</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="asset">Asset :</string>
    <string name="synced">Synced :</string>
    <string name="date">Date :</string>


    <string-array name="outlet_array">
        <item>Nairobi Bar</item>
        <item>Kisumu Restaurant</item>
        <item>Nanyuki Hotel</item>
        <item>Jack Bar</item>
        <item>Test Restaurant</item>
        <item>Test Bar</item>
        <item>Test Hotel</item>
    </string-array>

    <string-array name="device_array">
        <item>Fridge</item>
        <item>Grill</item>
        <item>Freezer</item>
        <item>Microwave</item>
        <item>Cooker</item>
        <item>Air Frier</item>
    </string-array>

    <string-array name="condition_array">
        <item>Good</item>
        <item>Bad</item>
        <item>Ok</item>
        <item>Other</item>
    </string-array>
</resources>